# HsBaSlicer

./: .clang-format  .gitignore  .qoderignore  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  skills-lock.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/skills/cpp-modern-features/: SKILL.md
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
2D/: 2Dhull.cpp  2Dhull.hpp  CMakeLists.txt  FloatPolygons.cpp  FloatPolygons.hpp  ImageToPolygons.cpp  ImageToPolygons.hpp  IntPolygon.cpp  IntPolygon.hpp  LuaAdapter.cpp  LuaAdapter.hpp  PolygonFill.cpp  PolygonFill.hpp
DllHsBaSlicer/: CMakeLists.txt  dllexport.h  initialize.cpp  initialize.h
HsBaSlicer/: CMakeLists.txt  HsBaSlicer.cpp  HsBaSlicer.h
LibHsBaSlicer/: CMakeLists.txt  export.h  pch_headers.hpp
LibHsBaSlicer/Slice/: mesh_slice.cpp  mesh_slice.hpp
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hsmbanlance/hsbaslicer/example/: MainActivity.java
base/: CMakeLists.txt  IModel.hpp  InplaceVector.hpp  ModelFormat.cpp  ModelFormat.hpp  any_object.cpp  any_object.hpp  any_visit.hpp  base_interface.hpp  boost_std_convert.hpp  concepts.hpp  coroutine.hpp  delegate.hpp  eigen_translator.cpp  eigen_translator.hpp  encoding_convert.cpp  encoding_convert.hpp  error.cpp  error.hpp  filename_check.cpp  filename_check.hpp  memory_pool.hpp  object_pool.hpp  singleton.hpp  static_reflect.hpp  string_helper.hpp  template_helper.hpp  thread_pool.hpp  tuple_each.hpp  units.hpp
cadmodel/: CMakeLists.txt  OcctModel.cpp  OcctModel.hpp  UserCustomCADModel.cpp  UserCustomCADModel.hpp
cipher/: CMakeLists.txt  LuaAdapter.cpp  LuaAdapter.hpp  encoder.cpp  encoder.hpp  encrypt.cpp  encrypt.hpp  hasher.cpp  hasher.hpp
convert/: CMakeLists.txt  Eigen2Msg.cpp  Eigen2Msg.hpp  FullTopoModel2Msg.cpp  FullTopoModel2Msg.hpp  Msg2Eigen.cpp  Msg2Eigen.hpp  Msg2FullTopoModel.cpp  Msg2FullTopoModel.hpp
docs/: CMakeLists.txt  Doxyfile  README.md
docs/en/: README.md  vcpkg-dependencies.md
docs/en/base/: README.md  any_object.md  any_visit.md  coroutine.md  delegate.md  memory_pool.md  object_pool.md  singleton.md  static_reflect.md  template_helper.md  thread_pool.md  tuple_each.md
docs/en/cipher/: README.md  encoder.md  encrypt.md  hasher.md
docs/en/fileoperator/: README.md  sql_adapter.md  unzipper.md  zipper.md
docs/en/logger/: README.md  log_state.md  logger_singletone.md
docs/en/utils/: README.md  app_config.md  logcfg.md  luaanyobject.md  luanewobject.md  pch_headers.md  struct_json.md
docs/zh/: README.md  vcpkg-dependencies.md
docs/zh/base/: README.md  any_object.md  any_visit.md  coroutine.md  delegate.md  memory_pool.md  object_pool.md  singleton.md  static_reflect.md  template_helper.md  thread_pool.md  tuple_each.md
docs/zh/cipher/: README.md  encoder.md  encrypt.md  hasher.md
docs/zh/fileoperator/: README.md  sql_adapter.md  unzipper.md  zipper.md
docs/zh/logger/: README.md  log_state.md  logger_singletone.md
docs/zh/utils/: README.md  app_config.md  logcfg.md  luaanyobject.md  luanewobject.md  pch_headers.md  struct_json.md
fileoperator/: CMakeLists.txt  IUnzipper.hpp  IZipper.hpp  LuaAdapter.cpp  LuaAdapter.hpp  RemoteExecutor.cpp  RemoteExecutor.hpp  bit7z_def.hpp  bit7z_unzipper.cpp  bit7z_unzipper.hpp  bit7z_zipper.cpp  bit7z_zipper.hpp  properties_doc.cpp  properties_doc.hpp  rw_ptree.cpp  rw_ptree.hpp  sql_adapter.cpp  sql_adapter.hpp  test_lua_adapter.lua  unzipper.cpp  unzipper.hpp  zipper.cpp  zipper.hpp
logger/: CMakeLists.txt  export.h  logger.cpp  logger.hpp
meshmodel/: CMakeLists.txt  CgalModel.cpp  CgalModel.hpp  FullTopoModel.cpp  FullTopoModel.hpp  IglModel.cpp  IglModel.hpp
overlay-ports/: README.md
paths/: CMakeLists.txt  IPath.hpp  imagespath.cpp  imagespath.hpp  layerspath.cpp  layerspath.hpp  pointspath.cpp  pointspath.hpp  robotpath.cpp  robotpath.hpp
proto/: CMakeLists.txt  base_config.proto  boolean_operation.proto  mesh.proto  path.proto  point.proto  slice_config.proto  transform.proto  vector.proto
static_check/: clang-format-batch.py  cpp_analyzer.py  feature_check.cmake
static_tests/: CMakeLists.txt  README.md
static_tests/base_static_tests/: CMakeLists.txt  base_static_tests.cpp
static_tests/utils_static_tests/: CMakeLists.txt  utils_static_tests.cpp
tests/: CMakeLists.txt
tests/AnyObject/: any_object_test.cpp
tests/AnyVisit/: anyvisit_test.cpp
tests/BoostStdConvert/: boost_std_convert_test.cpp
tests/Cipher/: cipher_test.cpp
tests/ConfigMap/: configmap_test.cpp  json_convert_test.cpp  struct_xml_test.cpp  struct_yaml_test.cpp
tests/Coroutines/: coroutines_test.cpp
tests/EnumSimpleConvert/: enum_simple_convert_test.cpp
tests/FilesOperator/: filename_check_test.cpp  remote_executor_test.cpp  sqlite_test.cpp  zipper_test.cpp
tests/Models/: cgal_model_test.cpp  full_topo_model_test.cpp  igl_model_test.cpp  occt_model_test.cpp
tests/PathsOut/: images_path_test.cpp  layers_path_test.cpp  points_path_test.cpp
tests/PolygonFill/: custom_fill.lua  image_from_polygons.lua  image_polygons_test.cpp  lua_polygon_operations_test.cpp  polygon_fill_test.cpp
tests/Pool/: memory_pool_test.cpp  object_pool_test.cpp  thread_pool_test.cpp
tests/Reflect/: static_reflect_test.cpp
tests/StringUtils/: string_utils_test.cpp
third_parts_without_vcpkg/: CMakeLists.txt
triplets/: README.md  arm64-ios.cmake  x64-ios.cmake
utils/: CMakeLists.txt  LuaAnyObject.cpp  LuaAnyObject.hpp  LuaDllLoader.cpp  LuaDllLoader.hpp  LuaNewObject.hpp  app_config.cpp  app_config.hpp  logcfg.ini  logger.cpp  logger.hpp  pch_headers.hpp  struct_concepts.hpp  struct_json.hpp  struct_xml.hpp  struct_yaml.hpp
